--- a/src/stylesheets/menu.css
+++ b/src/stylesheets/menu.css
@@ -673,3 +673,35 @@ Menu stats
 	height: 50% !important;
 	width: 50% !important;
 }
+
+/**
+Github cornet icon
+ */
+.github-corner:hover .octo-arm {
+	animation: octocat-wave 560ms ease-in-out;
+}
+
+@keyframes octocat-wave {
+	0%,
+	100% {
+		transform: rotate(0);
+	}
+	20%,
+	60% {
+		transform: rotate(-25deg);
+	}
+	40%,
+	80% {
+		transform: rotate(10deg);
+	}
+}
+
+@media (max-width: 500px) {
+	.github-corner .octo-arm {
+		animation: octocat-wave 560ms ease-in-out;
+	}
+
+	.github-corner:hover .octo-arm {
+		animation: none;
+	}
+}
