--- a/src/stylesheets/lib.css
+++ b/src/stylesheets/lib.css
@@ -248,3 +248,16 @@ ion.rangeSlider fix
 	opacity: 0.9;
 	zoom: 1;
 }
+
+/**
+-------------------------------------------------------------------------------
+DAT.GUI
+-------------------------------------------------------------------------------
+ */
+.dg li.title {
+	text-align: left;
+}
+
+.dg .property-name {
+	text-align: left;
+}
