--- a/src/stylesheets/lib.css
+++ b/src/stylesheets/lib.css
@@ -261,3 +261,12 @@ DAT.GUI
 .dg .property-name {
 	text-align: left;
 }
+
+/**
+-------------------------------------------------------------------------------
+Select2
+-------------------------------------------------------------------------------
+ */
+.select2-container {
+	max-width: 100%;
+}
