--- a/src/stylesheets/menu.css
+++ b/src/stylesheets/menu.css
@@ -753,3 +753,18 @@ Github cornet icon
 		animation: none;
 	}
 }
+
+/**
+Select2 input normal style
+ */
+.menu-input-select2 {
+	height: 42px !important;
+}
+
+.menu-input-select2 .select2-selection__rendered {
+	line-height: 40px !important;
+}
+
+.menu-input-select2 .select2-selection__arrow {
+	top: 8px !important;
+}
