--- a/src/stylesheets/lib.css
+++ b/src/stylesheets/lib.css
@@ -270,3 +270,7 @@ Select2
 .select2-container {
 	max-width: 100%;
 }
+
+.select2-container--default .select2-selection--single {
+	outline: none;
+}
